// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepeatBookingPage Component should render RepeatBookingPage component 1`] = `
<div>
  <div
    data-testid="RepeatBookingPage"
  />
</div>
`;

exports[`RepeatBookingPage getLayout should wrap page with DefaultLayout and ErrorBoundary 1`] = `
<div>
  <div
    data-show-footer="true"
    data-testid="DefaultLayout"
  >
    <div
      data-testid="ErrorBoundary"
    >
      <div
        data-testid="RepeatBookingPage"
      />
    </div>
  </div>
</div>
`;
